fix: rollback overflow in dialogs as caused breakage on resize

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,10 +56,6 @@ path.leaflet-interactive:focus {
   outline: none;
 }
 
-.mat-mdc-dialog-surface {
-  overflow-y: unset !important;
-}
-
 .mat-mdc-snack-bar-container .mdc-snackbar__surface {
   background-color: transparent !important;
   box-shadow: none !important;
